--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="./index.css">
     <title>JavaScript APIs</title>
   </head>
   <body>
@@ -28,11 +30,14 @@
 
         <div id="imageContainer" style="max-width: 680px">
           <img
+            id="img"
+      
             src="#"
             alt="Giphy Selection"
             style="width: 100%; height: auto"
           />
         </div>
+        <p id="paragraph"></p>
       </div>
     </main>
 
